[package]
name = "visit_collection_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "visit_collection_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "python"

[[package.metadata.maturin.python-modules]]
name = "visit_collection_rs"
sources = ["visit_collection_rs.pyi"]
